# MEGA

./: .gitignore  README.md  Sukhun-Yang.md
documents/: Kanghyeon-Cho.md  Sukhun-Yang.md  Taesun-Kim.md
project/: CMakeLists.txt  build_mac.sh  build_window.sh  build_windows.bat
project/resources/1-volcano/dragon/: dragon.mtl
project/resources/1-volcano/toothless/: toothless.mtl
project/resources/3-underwater/fish/shark/: shark.dae
project/resources/3-underwater/seashell/seashell2/: seashell2.mtl
project/shaders/2-desert/: shader_ray_tracing.fs
project/shaders/3-underwater/: shader_lighting.fs  shader_lighting.vs
project/shaders/shared/: shader_lighting.fs  shader_lighting.vs
project/src/: main.cpp
project/src/0-base/: scene.cpp
project/src/1-volcano/: particle_system.h  scene.cpp  volcano_trajectory.cpp
project/src/2-desert/: scene.cpp
project/src/3-underwater/: scene.cpp
project/src/3-underwater/animation/: assimp_glm_helpers.h  model_animation.h
project/src/shared/: camera.h  fade_foreground.h  geometry_primitives.h  math_utils.h  mesh.h  model.h  opengl_utils.h  scene.h  scene_module.h  scene_transition_effect.cpp  scene_transition_effect.h  stb_image.h
src/00-main/: CMakeLists.txt  apply_first_second_transition.sh  apply_last_second_transition.sh  make_video.sh
src/00-main/resources/1-volcano/airplane1/: 11803_Airplane_v1_l1.mtl
src/00-main/resources/3-underwater/mountain/: mountain.mtl
src/00-main/resources/3-underwater/wooden_boat/: wooden_boat.mtl
src/00-main/resources/room/: Read-me, Leia-me.txt  small house readme.txt  small_house_obj.mtl
src/00-main/resources/table/: Center Table.mtl
src/00-main/shaders/: csm.vs  shader_lighting.fs  shader_ray_tracing.fs
src/00-main/shaders/3-underwater/: shader_lighting.fs
src/00-main/shaders/shared/: shader_lighting.fs  shader_lighting.vs
src/00-main/src/: camera.h  main.cpp  mesh.h  model.h  scene0.cpp  scene00.cpp  texture.h
src/00-main/src/shared/: opengl_utils.h  texture.h  texture_cube.h
src/01-fire-guide/: CMakeLists.txt  apply_intro_transition.sh  build_mac.sh
src/01-fire-guide/resources/airplane2/: 11804_Airplane_v2_l2.mtl
src/01-fire-guide/resources/toothless/: toothless.mtl
src/01-fire-guide/shaders/: csm.gs  particle.fs  shader_lighting.fs
src/01-fire-guide/src/: camera.h  light.h  main.cpp  mesh.h  model.h  particle_system.h  scene.h  scene1.cpp  texture.h
src/02-desert-mirage/: CMakeLists.txt  apply_intro_transition.sh  build_mac.sh  make_video.sh
src/02-desert-mirage/shaders/: shader_desert_model.fs  shader_desert_model.vs  shader_heat_haze.fs  shader_ray_tracing.fs  shadow.fs  shadow.vs
src/02-desert-mirage/src/: camera.h  main.cpp  mesh.h  model.h  scene2.cpp  texture.h  texture_cube.h
src/03-underwater/: CMakeLists.txt  apply_intro_transition.sh
src/03-underwater/resources/caustics/: caustic.mpg
src/03-underwater/resources/fish/bass/: bass.dae
src/03-underwater/resources/fish/shark/: shark.dae
src/03-underwater/resources/floor/: floor.mtl
src/03-underwater/resources/seashell/pebble/: pebble.mtl
src/03-underwater/resources/seashell/seashell1/: seashell1.mtl
src/03-underwater/shaders/: csm.fs  shader_lighting.fs  shader_lighting.vs  shadow.fs  shadow.vs
src/03-underwater/src/: animation.h  camera.h  main.cpp  mesh.h  model.h  model_animation.h  model_animaton.h  scene3.cpp  spline_path.h  texture.h
src/03-underwater/src/animation/: animation.h  animator.h  assimp_glm_helpers.h  boid.h  bone.h  bone_info.h  model_animation.h  spline_path.h
